move log level to static constant